# ragkit

./: .env.example  .gitignore  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
evals/: README.md  __init__.py  dataset.draft.jsonl  dataset.example.jsonl  dataset.jsonl  eval_retrieval.py  judge_helper.py  judge_prompts.py  retry_failed.py  run_grid.py  schema.py  sweep_e1_vsw.yaml  sweep_e2_topk.yaml  visualize.py
evals/results/20260606_200314/e1_vsw/: metrics.csv  traces.jsonl
evals/results/20260606_202118/e1_vsw/: metrics.csv  traces.jsonl
evals/results/20260606_202118/e1_vsw/judge_batches/: batch_001.jsonl  batch_002.jsonl  batch_003.jsonl  batch_004.jsonl  batch_005.jsonl  batch_006.jsonl  batch_007.jsonl  batch_008.jsonl  batch_009.jsonl  batch_010.jsonl
evals/results/20260606_203409/e2_topk/: metrics.csv  traces.jsonl
evals/results/20260606_203409/e2_topk/judge_batches/: batch_001.jsonl  batch_002.jsonl  batch_003.jsonl  batch_004.jsonl  batch_005.jsonl  batch_006.jsonl
evals/results/final/: REPORT.md
src/ragkit/: __init__.py  config.py  eval_context.py  logger.py
src/ragkit/cli/: __init__.py  app.py  commands.py  graph_cmd.py  observe.py  repl.py  ui.py
src/ragkit/core/: __init__.py  chunker.py  embedder.py  generator.py  indexer.py  kb_manager.py  kb_validator.py  reranker.py  retriever.py
src/ragkit/core/_ragflow/: README.md
src/ragkit/core/_ragflow/deepdoc/parser/: docx_parser.py  excel_parser.py  html_parser.py  json_parser.py  pdf_parser.py  txt_parser.py  utils.py
src/ragkit/core/_ragflow/deepdoc/vision/: __init__.py  layout_recognizer.py  ocr.py  operators.py  recognizer.py  table_structure_recognizer.py
src/ragkit/core/_ragflow/rag/: settings.py
src/ragkit/core/_ragflow/rag/app/: naive.py
src/ragkit/core/_ragflow/rag/nlp/: __init__.py  model.py  query.py  rag_tokenizer.py  search_v2.py  synonym.py  term_weight.py
src/ragkit/core/_ragflow/rag/utils/: __init__.py  es_conn.py
src/ragkit/core/deepdoc/: __init__.py
src/ragkit/core/deepdoc/parser/: docx_parser.py  excel_parser.py  html_parser.py  json_parser.py  pdf_parser.py  txt_parser.py  utils.py
src/ragkit/core/deepdoc/vision/: layout_recognizer.py  ocr.py  recognizer.py  table_structure_recognizer.py
src/ragkit/core/graph/: PIPELINE.md  __init__.py  builder.py  community.py  description_merger.py  es_indexer.py  extractor.py  global_search.py  retriever.py  searcher.py  store.py  summarizer.py  types.py
src/ragkit/core/rag/: settings.py
src/ragkit/core/rag/app/: naive.py
src/ragkit/core/rag/nlp/: __init__.py  query.py  rag_tokenizer.py  search_v2.py  synonym.py  term_weight.py
src/ragkit/core/rag/utils/: __init__.py  es_conn.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_cli_ask_modes.py  test_cli_eval_trace.py  test_cli_misc.py  test_config.py  test_description_merger.py  test_embedder.py  test_es_indexer.py  test_eval_context.py  test_eval_retrieval.py  test_generator.py  test_global_search.py  test_graph_builder_cli.py  test_graph_community.py  test_graph_extractor.py  test_graph_retriever.py  test_graph_searcher.py  test_graph_store.py  test_graph_summarizer.py  test_graph_types.py  test_indexer.py  test_judge_helper.py  test_kb_manager.py  test_kb_validator.py  test_observe.py  test_repl.py  test_reranker.py  test_retriever.py  test_retriever_integration.py  test_run_grid.py
