[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragkit"
version = "0.1.0"
description = "A minimal RAG (Retrieval-Augmented Generation) toolkit with a CLI interface"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "leng" }]

dependencies = [
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    "prompt_toolkit>=3.0",

    # Config
    "python-dotenv>=1.0",

    # LLM / Embedding / Rerank
    "openai>=1.40",
    "llama-index-core>=0.10",
    "llama-index-postprocessor-dashscope-rerank-custom",
    "dashscope>=1.20",  # required by the rerank postprocessor (lazy dep upstream)

    # Document parsing
    "pdfplumber",
    "pypdf",
    "python-docx",
    "openpyxl",
    "python-pptx",
    "markdown",
    "readability-lxml",
    "lxml_html_clean",
    "html-text",
    "tika",

    # Chinese NLP
    "jieba",
    "datrie",
    "hanziconv",
    "nltk",
    "tiktoken",
    "chardet",

    # Vector + full-text search
    "elasticsearch>=8.0,<9.0",
    "elasticsearch-dsl>=8.0,<9.0",

    # OCR / Computer vision
    "opencv-python",
    "onnxruntime",
    "shapely",
    "pyclipper",
    "huggingface_hub",
    "Pillow",
    "xgboost>=2.0,<3.0",  # deepdoc's updown_concat_xgb.model is legacy binary; XGBoost 3.1+ removed support
    "six",           # used by deepdoc/vision/operators.py
    "fasttext",      # used by deepdoc/vision/operators.py (language detection)

    # Tabular / numeric (used by deepdoc parsers + nlp similarity)
    "pandas",
    "scikit-learn",  # imported as 'sklearn' by rag/nlp/query.py for cosine similarity

    # Utilities
    "xxhash",
    "numpy",
    "colorlog",

    # Graph RAG
    "networkx>=3.0",
    "python-louvain>=0.16",
]

[project.urls]
Homepage = "https://github.com/LENG-ZECHEN/ragkit"
Repository = "https://github.com/LENG-ZECHEN/ragkit"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[project.scripts]
rag = "ragkit.cli.app:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ragkit.core._ragflow.rag" = ["res/*.txt", "res/*.trie", "res/deepdoc/*"]
"ragkit.core._ragflow" = ["conf/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast unit tests with no external dependencies",
    "integration: tests requiring external services (ES, DashScope)",
]
